--- a/index.html
+++ b/index.html
@@ -51,9 +51,106 @@
       </div>
     </nav>
 
-    <section class="container-fluid">
-      <div class="row">
-        <div class="col-6"><h2>MUSEUM OF CANDY</h2></div>
+    <section class="container-fluid px-0">
+      <div class="row align-items-center">
+        <div class="col-lg-6">
+          <div
+            id="headingGroup"
+            class="text-white text-center d-none d-lg-block mt-5"
+          >
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+            <h1>MUSEUM<span>/</span>OF<span>/</span>CANDY</h1>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img class="img-fluid" src="./imgs/hand2.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="container-fluid px-0">
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="img-fluid" src="./imgs/milk.png" alt="" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 box mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                src="/imgs/lolli_icon.png"
+                class="d-none d-lg-inline"
+                alt=""
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                iste molestiae beatae, maiores deserunt in voluptatibus
+                aspernatur architecto excepturi delectus soluta? Ipsa, deleniti
+                dolorem hic consequatur repellat eveniet quidem voluptate
+                necessitatibus dolorum delectus minus vitae, ut, veritatis sint
+                ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis,
+                quidem assumenda.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 text-center">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 box mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                src="/imgs/lolli_icon.png"
+                class="d-none d-lg-inline"
+                alt=""
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                iste molestiae beatae, maiores deserunt in voluptatibus
+                aspernatur architecto excepturi delectus soluta? Ipsa, deleniti
+                dolorem hic consequatur repellat eveniet quidem voluptate
+                necessitatibus dolorum delectus minus vitae, ut, veritatis sint
+                ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis,
+                quidem assumenda.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img class="img-fluid" src="./imgs/gumball.png" alt="" />
+        </div>
+      </div>
+      <div class="row align-items-center content">
+        <div class="col-md-6 order-2 order-md-1">
+          <img class="img-fluid" src="./imgs/sprinkles.png" alt="" />
+        </div>
+        <div class="col-md-6 text-center order-1 order-md-2">
+          <div class="row justify-content-center">
+            <div class="col-10 col-lg-8 box mb-5 mb-md-0">
+              <h2>MUSEUM OF CANDY</h2>
+              <img
+                src="/imgs/lolli_icon.png"
+                class="d-none d-lg-inline"
+                alt=""
+              />
+              <p class="lead">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque,
+                iste molestiae beatae, maiores deserunt in voluptatibus
+                aspernatur architecto excepturi delectus soluta? Ipsa, deleniti
+                dolorem hic consequatur repellat eveniet quidem voluptate
+                necessitatibus dolorum delectus minus vitae, ut, veritatis sint
+                ipsum magnam autem nam ex deserunt debitis eaque ratione! Nobis,
+                quidem assumenda.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -72,5 +169,14 @@
       integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      $(function () {
+        $(document).scroll(function () {
+          var $nav = $('#mainNavbar');
+          $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+        });
+      });
+    </script>
   </body>
 </html>
